throws SubjectNotUniqueException
git-svn-id: https://svn.internet2.edu/svn/i2mi/trunk@2761 bc24b658-cf39-4249-b827-e3526eaaeb42